--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,5 +12,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 9842e074b8ee46aef76fd0d493bae0ed
-          TIMEZONE: Asia/Taipei
+          GIST_ID: 917f9d935b55fb7cf21117dd6781f195
+          TIMEZONE: Asia/Seoul
